# cpp-template

./: .clang-format  .gitignore  CMakeLists.txt  setup_names.py
cmake/: ClangFormat.cmake  FindValgrind.cmake  MyProjectUtils.cmake
include/: lib.hpp
src/: CMakeLists.txt  lib.cpp  main.cpp
test/: CMakeLists.txt  test_lib.cpp
